--- a/index.html
+++ b/index.html
@@ -8,62 +8,81 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://code.jquery.com/jquery-2.1.1.js'></script>
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
+<link href='style.css' rel='stylesheet' />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-
-
-<style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
 </head>
 <body>
-<div id="name">
-  Few the data here: https://docs.google.com/spreadsheets/d/1UWW8ShcE6prusMjRMFWmGhT9X7VtsD1UbvsiqzoI8yE/edit#gid=0
-  Know of an event that isn't on here? Submit it!
-</div>
-<div id='map'></div>
-<script>
-function onEachFeature(feature, layer) {
-    // does this feature have a property named popupContent?
+  <section id="container" >
+    <!--header start-->
+    <header class="header white-bg">
+      <div class="sidebar-toggle-box">
+        <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
+      </div>
+      <!--logo start-->
+      <a href="#" class="logo"><span>#</span>HandsUpWalkOut // Dec 1 // 12pm CST // Actions</a>
+      <!--logo end-->
+    </header>
+<!--header end-->
 
-    if (feature.properties && feature.properties['Event Name'] && feature.properties['Location']) {
-        var popupString = '<strong>' + feature.properties['Event Name'] + '</strong>'
-        if (feature.properties['Facebook event']) {
-          popupString += '<br /> (<a href="' + feature.properties['Facebook event'] +'">';
-          popupString += 'facebook event)</a>';
+<!--sidebar start-->
+<aside>
+  <div id="sidebar"  class="nav-collapse ">
+    <!-- sidebar menu start-->
+    <ul class="sidebar-menu">
 
-        }
-        if (feature.properties['Time']) {
-          popupString += '<br /><strong>Time:</strong> ';
-          popupString += feature.properties['Time'];
-        }
+      <li>
+        <a href="http://bit.ly/FergusonNatlReponseForm" class="create-stand-link">
+          <i class="fa fa-thumb-tack"></i>
+          <span>Submit an action</span>
+        </a>
+      </li>
 
-        popupString += '<br /> <strong>Location:</strong> ' + feature.properties['Location'];
-        if (feature.properties['More info']) {
-          popupString += '<br /> <strong>More info:</strong> ';
-            popupString += feature.properties['More info'];
-        }
-        layer.bindPopup(popupString);
-    }
-}
+    </ul>
+    <span class="cred">
+    <p>
+      This is a map of planned HANDS UP WALK OUT events on Mon Dec 1st - 12:01 pm CST in solidarity with Ferguson.
+    </p>
+    <p>
+      Text "HANDS UP" to 90975 to get text updates.
+    </p>
+    <p>
+      Read more about attending or planning an action from <a href="http://fergusonaction.com/hands-up-walk-out/">FergusonAction.com</a>.
+    </p>
+    <p>
+      Event information from <a href="http://fergusonresponse.tumblr.com">fergusonresponse.tumblr.com</a>
+    </p>
+  </span>
+    <!-- sidebar menu end-->
+  </div>
+</aside>
+<!--sidebar end-->
+<!--main content start-->
+<section id="main-content">
+  <div class="wrapper">
+    <div id="map"></div>
+  </div>
 
-$.getJSON( "https://s3-us-west-2.amazonaws.com/lets-see/walkout/walkout.geojson", function( data ) {
-  console.log(data);
-  window.what = data;
-  L.mapbox.accessToken = 'pk.eyJ1IjoiZHJld3J3aWxzb24iLCJhIjoiUkplQ29iUSJ9.6cM-yTJjzxwfCWUNDOgi8w';
-  var map =   L.mapbox.map('map', 'drewrwilson.kc0jg4g8')
-    .setView([37.8, -96], 5);
-  var myLayer = L.geoJson(data,{
-    onEachFeature: onEachFeature
-}).addTo(map);
-  myLayer.addData(data);
 
-});
-// Provide your access token
-// Create a map in the div #map
-</script>
+
+
+  </section>
+  <!--main content end-->
+</section>
+
+
+
+
+<script src='map.js'></script>
+<script src='scripts.js'></script>
 <script>
   // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
