add CNAME and google analytics

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Ferguson Walk Outs Across the Country</title>
+<title>#HandsUpWalkOut - Join an Action</title>
 
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <script src='https://code.jquery.com/jquery-2.1.1.js'></script>
@@ -52,7 +52,7 @@
       This is a map of planned HANDS UP WALK OUT events on Mon Dec 1st - 12:01 pm CST in solidarity with Ferguson.
     </p>
     <p>
-      Text "HANDS UP" to 90975 to get text updates.
+      Text "HANDS UP" to 90975 to get updates.
     </p>
     <p>
       Read more about attending or planning an action from <a href="http://fergusonaction.com/hands-up-walk-out/">FergusonAction.com</a>.
@@ -84,14 +84,14 @@
 <script src='map.js'></script>
 <script src='scripts.js'></script>
 <script>
-  // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  //
-  // ga('create', 'UA-38496412-4', 'auto');
-  // ga('send', 'pageview');
-  //
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-1111502-23', 'auto');
+ga('send', 'pageview');
+
 </script>
 </body>
 </html>
