temporary form link, update later

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
       </div>
       <!--logo start-->
-      <a href="#" class="logo"><span>#</span>HandsUpWalkOut // Dec 1 // 12pm CST // Actions</a>
+      <a href="#" class="logo"><span>#</span>HandsUpWalkOut // Actions // Dec 1 // 12pm CST </a>
       <!--logo end-->
     </header>
 <!--header end-->
@@ -40,7 +40,7 @@
     <ul class="sidebar-menu">
 
       <li>
-        <a href="http://bit.ly/FergusonNatlReponseForm" class="create-stand-link">
+        <a href="http://goo.gl/forms/tsdA51UVPS" class="create-stand-link">
           <i class="fa fa-thumb-tack"></i>
           <span>Submit an action</span>
         </a>
