--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta property="og:title" content="HandsUpWalkout Actions Across the US">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://handsupwalkout.com">
+  <meta property="og:image" content="http://handsupwalkout.com/handsupwalkout.jpg">
+  <meta property="og:site_name" content="HandsUpWalkout.com">
+  <meta property="og:description" content="#HandsUpWalkout actions planned across the US. Monday, Dec 1 at noon CST walk out of school/work/etc.">
+
+
 <meta charset=utf-8 />
 <title>#HandsUpWalkOut - Join an Action</title>
 
