--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:title" content="HandsUpWalkout Actions Across the US">
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://handsupwalkout.com/">
-  <meta property="og:image" content="http://handsupwalkout.com/handsupwalkout.jpg">
+  <meta property="og:image" content="http://handsupwalkout.com/handsupwalkout-fb.jpg">
   <meta property="og:site_name" content="HandsUpWalkout.com">
   <meta property="og:description" content="#HandsUpWalkout actions planned across the US. Monday, Dec 1 at noon CST walk out of school/work/etc.">
 
