--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <ul class="sidebar-menu">
 
       <li>
-        <a href="http://bit.ly/FergusonNatlReponseForm" class="create-stand-link">
+        <a href="http://goo.gl/forms/NSuXSoSA6k " class="create-stand-link">
           <i class="fa fa-thumb-tack"></i>
           <span>Submit an action</span>
         </a>
@@ -66,6 +66,10 @@
       Read more about attending or planning an action from <a href="http://fergusonaction.com/hands-up-walk-out/">FergusonAction.com</a>.
     </p>
     <p>
+
+    </p>
+    <p>
+      There are MANY more events than listed here. <br />
       Event information from <a href="http://fergusonresponse.tumblr.com">fergusonresponse.tumblr.com</a>
     </p>
   </span>
