--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <ul class="sidebar-menu">
 
       <li>
-        <a href="http://goo.gl/forms/NSuXSoSA6k " class="create-stand-link">
+        <a href="http://bit.ly/FergusonNatlReponseForm" class="create-stand-link">
           <i class="fa fa-thumb-tack"></i>
           <span>Submit an action</span>
         </a>
