--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -48,7 +47,7 @@
     <ul class="sidebar-menu">
 
       <li>
-        <a href="http://bit.ly/FergusonNatlReponseForm" class="create-stand-link">
+        <a href="https://docs.google.com/forms/d/1myNRCU0_EQ3-inLbBfrxa2toUlsJWpHmeSMVtf8sdNw/viewform" class="create-stand-link">
           <i class="fa fa-thumb-tack"></i>
           <span>Submit an action</span>
         </a>
