--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul class="sidebar-menu">
 
       <li>
-        <a href="https://docs.google.com/forms/d/1myNRCU0_EQ3-inLbBfrxa2toUlsJWpHmeSMVtf8sdNw/viewform" class="create-stand-link">
+        <a href="http://goo.gl/forms/LuR5TKgKM3" class="create-stand-link">
           <i class="fa fa-thumb-tack"></i>
           <span>Submit an action</span>
         </a>
