No visible change except that header doesn't link to home
- because this is a one page site, we'll already be on the homepage
  so we don't need to link there

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
       </div>
       <!--logo start-->
-      <a href="#" class="logo"><span>#</span>HandsUpWalkOut // Actions // Dec 1 // 12pm CST </a>
+      <div class="logo"><span class="hash">#</span>HandsUpWalkOut // Actions // Dec 1 // 12pm CST </div>
       <!--logo end-->
     </header>
 <!--header end-->
