when someone clicks time, rotate timezones
- because I can never remember what these are

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
       </div>
       <!--logo start-->
-      <div class="logo"><span class="hash">#</span>HandsUpWalkOut // Actions // Dec 1 // 12pm CST </div>
+      <div class="logo"><span class="hash">#</span>HandsUpWalkOut // Actions // Dec 1 // <span id="when"><span class="time">12pm</span> <span class="zone">CST</span></span></div>
       <!--logo end-->
     </header>
 <!--header end-->
@@ -93,6 +93,7 @@
 
 
 <script src='map.js'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.compat.min.js'></script>
 <script src='scripts.js'></script>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
