link to twitter hashtag
- because we aren’t all twitter masters to begin 
  with, hopefully this helps people new to twitter.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       There are MANY more events than listed here. <br />
       Event information from <a href="http://fergusonresponse.tumblr.com">fergusonresponse.tumblr.com</a>
     </p>
+    <p>Follow and share the action on twitter with the <a target="_new" href="https://twitter.com/search?q=%23HandsUpWalkout">#HandsUpWalkout</a> hashtag.
   </div>
     <!-- sidebar menu end-->
   </div>
